--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 			var timer = setInterval(displayWorldTime, 1000);
 			
 			var cities = [
-                {name: "Paris", utcOffset: 2, flag: "France.png"},
-                {name: "Tirana", utcOffset: 2, flag: "Albania.png"},
+                {name: "Colombia", utcOffset: 2, flag: "Colombia.png"},
+                {name: "Lesotho", utcOffset: 2, flag: "Lesotho.png"},
                 {name: "Bangkok", utcOffset: 7, flag: "Thailand.png"},
-                {name: "Aden", utcOffset:  3, flag: "Yemen.png"},
-                {name: "Apia", utcOffset: 13, flag: "Samoa.png"},
+                {name: "South Africa", utcOffset:  3, flag: "South-Africa.png"},
+                {name: "Tajikistan", utcOffset: 13, flag: "Tajikistan.png"},
                 {name: "Ashgabat", utcOffset: 5, flag: "Turkmenistan.png"},
-                {name: "Kuala Lampur", utcOffset: 8, flag: "Malaysia.png"},
-                {name: "Stockholm", utcOffset: 2, flag: "Sweden.png"}
+                {name: "Spain", utcOffset: 8, flag: "Spain.png"},
+                {name: "Thailand", utcOffset: 2, flag: "Thailand.png"}
             ];
 			
 			cities.sort(compare);
